fix over https test